objects/FSL__UserSetting__c.object
<CustomObject>
    <label>User Setting</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>User Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>FSL__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Filters__c</fullName>
        <description>Custom service list filters</description>
        <label>Filters</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Lock_Gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>gantt is locked for drag and drop</description>
        <label>Lock Gantt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Map_Reports__c</fullName>
        <label>Map Reports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Drag_Na_Type__c</fullName>
        <label>Drag Na Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gantt Chart Policy</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>User Settings</relationshipLabel>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Drag_Na_Label__c</fullName>
        <label>Drag Na Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Palette__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gantt Palette</label>
        <referenceTo>FSL__GanttPalette__c</referenceTo>
        <relationshipLabel>User Settings</relationshipLabel>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Load_On_Today__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First load gantt on today&apos;s date or last visited date</description>
        <label>Load On Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Filter__c</fullName>
        <description>Last selected resource filtering for gantt view</description>
        <label>Resource Filter</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__DefaultLeftPanel__c</fullName>
        <description>The default panel on the left side of the gantt</description>
        <label>Default Left Panel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Drag_Na_Duration__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Drag Na Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Include_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include weekends inside the gantt view</description>
        <label>Include Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Filter_Candidates__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Filter candidates after get slots</description>
        <label>Filter Candidates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Match_Gantt_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service list should match the dates visible on the gantt</description>
        <label>Match Gantt Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Services_Per_Page__c</fullName>
        <description>Set the maximum amount of services per page</description>
        <label>Services Per Page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>75</fullName>
                    <default>true</default>
                    <label>75</label>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Invisible_Polygons__c</fullName>
        <description>List of ids of Invisible polygons on the map</description>
        <label>Hidden Polygons</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Map_Object_Markers__c</fullName>
        <label>Map Object Markers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Selected_List_View__c</fullName>
        <description>Last selected list view for service appointment list</description>
        <label>Selected List View</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__View_Capacity_Type__c</fullName>
        <description>Show only capacities with chosen duration</description>
        <label>View Capacity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__FavoriteTerritories__c</fullName>
        <description>List of ids of favorite territories</description>
        <label>Favorite Territories</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Highlight_Weekeneds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Highlight Weekeneds On The Gantt</description>
        <label>Highlight Weekeneds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Map_Markers_Cluster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gantt markers clustering</description>
        <label>Marker Clustering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Row_Height__c</fullName>
        <description>Set the height of a row in the gantt</description>
        <label>Resource Row Height</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>medium</fullName>
                    <default>true</default>
                    <label>medium</label>
                </value>
                <value>
                    <fullName>xsmall</fullName>
                </value>
                <value>
                    <fullName>small</fullName>
                </value>
                <value>
                    <fullName>large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__ServiceListColoring__c</fullName>
        <description>Background styling for service on the list</description>
        <label>Service List Coloring</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Toggled_Territories__c</fullName>
        <description>Decide if a territory is opened on the Gantt view</description>
        <label>Toggled Territories</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Show_Orphan_Services__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Orphan Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__DaysInUtilizationView__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Days In Utilization View</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_View_Start_Hour__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Set the visible start hour on the timeline</description>
        <label>Gantt View Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Skills_Logic_Operator__c</fullName>
        <label>Skills Filter Logic Operator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_View_Finish_Hour__c</fullName>
        <defaultValue>24</defaultValue>
        <description>Set the visible finish hour on the timeline</description>
        <label>Gantt View Finish Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Longterm_Num_Of_Months__c</fullName>
        <defaultValue>8</defaultValue>
        <description>Number of months to display on the long term view</description>
        <label>Months on view</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Utilization_Properties__c</fullName>
        <description>Selected properties for calculating utilization</description>
        <label>Utilization Properties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Date_Horizon_Properties__c</fullName>
        <description>Selected date horizon fields</description>
        <label>Date Horizon Properties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_horizon_limit__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Determines the number of days to show before the selected scheduling horizon</description>
        <label>Scheduling horizon limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Show_Only_MDT_In_Longterm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show only MDT service appointments in long term view</description>
        <label>Show only MDT in Longterm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__ShowFavoriteTerritoriesTab__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default tab to show on the territories window</description>
        <label>Show Favorite Territories Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Left_Panel_Width_Percentage__c</fullName>
        <label>Left Panel Width Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL__Longterm_Min_Absence_Duration__c</fullName>
        <defaultValue>8</defaultValue>
        <description>Minimum duration of Resource Absence to show on the long term view</description>
        <label>Longterm Minimum Absence Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Longterm_Min_Service_Duration__c</fullName>
        <defaultValue>8</defaultValue>
        <description>Minimum duration of Service Appointment to show on the long term view</description>
        <label>Longterm Minimum Service Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Services_List_Height_Percentage__c</fullName>
        <label>Services_List_Height Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>